--- a/app/src/main/res/layout/item_loker_home.xml
+++ b/app/src/main/res/layout/item_loker_home.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="200dp"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginHorizontal="6dp"
     android:layout_marginVertical="10dp"
     app:cardCornerRadius="6dp"
@@ -16,10 +17,10 @@
 
         <ImageView
             android:id="@+id/img_logo_kantor_item_loker"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:scaleType="centerInside"
-            android:src="@drawable/icon_telkom" />
+            android:src="@drawable/ic_kantor_mobil" />
 
         <TextView
             android:id="@+id/tv_judul_loker_item"
@@ -29,10 +30,10 @@
             android:layout_marginTop="5dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="Staff Administrasi Keuangan"
             android:textColor="@color/black"
-            android:textSize="12sp"
-            android:textStyle="bold" />
+            android:textSize="14sp"
+            android:textStyle="bold"
+            tools:text="Staff Administrasi Keuangan" />
 
         <TextView
             android:id="@+id/tv_nama_kantor_loker_item"
@@ -41,9 +42,9 @@
             android:layout_below="@id/tv_judul_loker_item"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="PT Telkom Indonesia (Persero) Tbk (Telkom)"
+            tools:text="PT Telkom Indonesia (Persero) Tbk (Telkom)"
             android:textColor="@color/black"
-            android:textSize="10sp" />
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/tv_kota_loker_item"
@@ -53,9 +54,9 @@
             android:layout_marginTop="5dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="Makassar"
+            tools:text="Makassar"
             android:textColor="@color/grey_hint"
-            android:textSize="10sp" />
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/tv_range_gaji_loker_item"
@@ -65,9 +66,9 @@
             android:layout_marginTop="10dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="Rp. 5.000.000 - Rp. 8.000.000"
+            tools:text="Rp. 5.000.000 - Rp. 8.000.000"
             android:textColor="@color/colorPrimary"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textStyle="bold" />
 
     </RelativeLayout>
