--- a/app/src/main/res/layout/activity_organisasi.xml
+++ b/app/src/main/res/layout/activity_organisasi.xml
@@ -46,11 +46,18 @@
 
     </RelativeLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_organisasi"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/rl_toolbar_organisasi"
-        android:layout_marginTop="5dp"
-        tools:listitem="@layout/item_organisasi" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/rl_toolbar_organisasi">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_organisasi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/rl_toolbar_organisasi"
+            android:layout_marginTop="5dp"
+            tools:listitem="@layout/item_organisasi" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </RelativeLayout>
