--- a/app/src/main/res/layout/item_fakultas_lembaga.xml
+++ b/app/src/main/res/layout/item_fakultas_lembaga.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="16dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="Fakultas Sains dan Teknologi"
+        tools:text="Fakultas Sains dan Teknologi"
         android:textColor="@color/colorPrimary"
         android:textSize="16dp"
         android:textStyle="bold" />
@@ -33,10 +33,10 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_lembaga_item"
-                tools:itemCount="1"
-                tools:listitem="@layout/item_lembaga"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                tools:itemCount="1"
+                tools:listitem="@layout/item_lembaga" />
 
         </RelativeLayout>
 
