--- a/app/src/main/res/layout/item_lembaga.xml
+++ b/app/src/main/res/layout/item_lembaga.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="120dp"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="6dp"
     android:background="@color/transparan">
@@ -24,8 +25,7 @@
                 android:id="@+id/img_header_item_lembaga"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside"
+                android:scaleType="matrix"
                 android:src="@drawable/header_lembaga_default" />
 
             <View
@@ -54,6 +54,7 @@
                         <ImageView
                             android:id="@+id/img_photo_item_lembaga"
                             android:layout_width="match_parent"
+                            android:scaleType="centerInside"
                             android:layout_height="match_parent"
                             android:src="@drawable/lembaga_default" />
 
@@ -68,6 +69,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/tv_nama_lembaga"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/cv_item_lembaga"
@@ -78,7 +80,7 @@
         android:gravity="center_horizontal"
         android:maxLines="2"
         android:minLines="2"
-        android:text="HMJ - Sistem Informasi"
+        tools:text="HMJ - Sistem Informasi"
         android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold" />
