--- a/app/src/main/res/layout/item_organisasi.xml
+++ b/app/src/main/res/layout/item_organisasi.xml
@@ -9,16 +9,17 @@
     app:cardElevation="6dp">
 
     <RelativeLayout
-        android:paddingBottom="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:paddingBottom="12dp">
 
         <ImageView
             android:id="@+id/img_header_organisasi_item"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:src="@color/colorPrimary" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/header_lembaga_default" />
 
         <RelativeLayout
             android:id="@+id/rl_photo_item_organisasi"
@@ -43,6 +44,7 @@
                     <ImageView
                         android:id="@+id/img_photo_item_organisasi"
                         android:layout_width="match_parent"
+                        android:scaleType="fitXY"
                         android:layout_height="match_parent"
                         android:src="@drawable/ic_man_photo_default" />
 
@@ -60,6 +62,8 @@
             android:layout_marginLeft="12dp"
             android:layout_marginTop="10dp"
             android:layout_toRightOf="@id/rl_photo_item_organisasi"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="Nama Organisasi"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -73,7 +77,7 @@
             android:layout_alignLeft="@id/tv_nama_item_organisasi"
             android:layout_marginTop="5dp"
             android:text="Teknologi Informasi"
-            android:textColor="@color/grey_hint"
+            android:textColor="@color/grey"
             android:textSize="12sp" />
 
     </RelativeLayout>
